--- a/src/HTML/EN/plugins/CustomSkip/settings/subpage_chooser.html
+++ b/src/HTML/EN/plugins/CustomSkip/settings/subpage_chooser.html
@@ -1,5 +1,5 @@
 [% WRAPPER settingGroup title="SETUP_PLUGIN_CUSTOMSKIP_GROUP" desc="" %]
-	<div class="prefDesc">[% "SETUP_PLUGIN_CUSTOMSKIP_GROUP_DESC" | string %][% IF licensemanager %]<br><br><b><a href="[% webroot %]plugins/LicenseManagerPlugin/settings/basic.html">[% "SETUP_PLUGIN_CUSTOMSKIP_DONATE_LINK" | string %]</a></b>[% END %]</div>
+	<div class="prefDesc">[% "SETUP_PLUGIN_CUSTOMSKIP_GROUP_DESC" | string %][% IF licensemanager and licensed %]<br><br><b><a href="[% webroot %]plugins/LicenseManagerPlugin/settings/basic.html">[% "SETUP_PLUGIN_CUSTOMSKIP_DONATE_LINK" | string %]</a></b>[% ELSIF licensemanager and !licensed %]<br><br><b><a href="[% webroot %]plugins/LicenseManagerPlugin/settings/basic.html">[% "PLUGIN_CUSTOMSKIP_LICENSE_REQUIRED" | string %]</a></b>[% END %]</div>
 [% END %]
 [% IF subpages.size>1 %]
 [% WRAPPER settingGroup title="SETUP_PLUGIN_CUSTOMSKIP_SECTION" desc="SETUP_PLUGIN_CUSTOMSKIP_SECTION_DESC" %]
